--- a/src/component/Games.css
+++ b/src/component/Games.css
@@ -1,9 +1,9 @@
 @media screen and (max-width: 728px) {
-    .games-container {
+    /* .games-container {
         margin: auto;
         margin-top: 200px;
         padding-bottom: 30px;
-    }
+    } */
     .header1 {
         display: flex;
         align-items: center;
