--- a/src/component/Registration.css
+++ b/src/component/Registration.css
@@ -14,6 +14,20 @@
         width: 100%;
         margin-top: 30px;
     }
+    .cancel{
+        display: flex;
+        align-self: flex-end;
+        justify-self: right;
+        align-content: end;
+      }      
+      #cancel-login{
+        background: none;
+        border: none;
+        font-size: 20px;
+        margin-right: 10px;
+        color: #82A67D;
+        font-weight: 1000;
+      }
     .text {
         color: #82A67D;
         font-size: 48px;
